[zhongyuan_security_1.0.0.1 2014-05-31 张春生]
1.新功能:初始化项目
2.新功能:安装dedecms

[zhongyuan_security_1.0.0.1 2014-06-01 张春生]
1.新功能:增加模板
2.新功能:增加模板样式

[zhongyuan_security_1.0.0.1 2014-06-02 张春生]
1.新功能:增加image slider功能

[zhongyuan_security_1.0.0.1 2014-06-03 张春生]
1.新功能:更新域名
2.新功能:更新图片

[zhongyuan_security_1.0.0.1 2014-06-06 张春生]
1.新功能:增加ucenter模块
2.新功能:增加问答和圈子模块

[zhongyuan_security_1.0.0.1 2014-06-08 张春生]
1.新功能:调整栏目列表和文章模板

[zhongyuan_security_1.0.0.1 2014-06-09 张春生]
1.新功能:调整todo

[zhongyuan_security_1.0.0.1 2014-06-15 张春生]
1.新功能:增加bbs,sns,ucenter功能
2.新功能:增加bbs配置，dedecms连接ucenter
3.新功能:增加sns配置
4.新功能:增加登录功能

[zhongyuan_security_1.0.0.1 2014-06-16 张春生]
1.新功能:备份数据库
2.新功能:修改数据库信息
3.新功能:调整todo

[zhongyuan_security_1.0.0.1 2014-06-20 张春生]
1.新功能:调整域名

[zhongyuan_security_1.0.0.1 2014-06-20 张春生]
1.新功能:调整cookie作用域为.zhongguohaogongsi.com

[zhongyuan_security_1.0.0.1 2014-06-23 张春生]
1.新功能:调整注册功能，同时注册dedecms,bbs,sns
2.新功能:增加php配置
3.新功能:调整todo内容

[zhongyuan_security_1.0.0.1 2014-06-30 张春生]
1.新功能:调整菜单样式

[zhongyuan_security_1.0.0.1 2014-07-07 张春生]
1.新功能:更改首页样式

[zhongyuan_security_1.0.0.1 2014-07-19 张春生]
1.新功能:更新sql语句
2.新功能:更新主页
3.新功能:增加邮件功能

--备注分类
1、新功能：
2、Bug:
3、需求变更：
4、重构：
5、merge:

--格式：
[zhongyuan_security_1.0.0.1 2014-05-31 张春生]
版本号 日期 提交人
版本号：产品名 版本类型 主版本 辅版本 新功能版本 缺陷版本