@@ -270,6 +270,39 @@
     </div>
 </div>
 
+<div id="customerService" class="customerService" style="display: block;">
+    <!--<a href="#" target="_blank">
+        <img border="0" src="{dede:global.cfg_templets_skin/}/images/aliyun_robot.png" align="middle">
+    </a>-->
+    <!--QQ客服代码开始-->
+    <div>
+        <table width="160" border="0" align="center" cellpadding="0"
+               cellspacing="0">
+            <tr>
+                <td height="35" colspan="2" align="left" valign="middle">&nbsp;&nbsp;
+                    在线客服：</td>
+            </tr>
+            <tr>
+                <td width="50%" height="35" align="left">
+                    <a target=blank href="tencent://message/?uin=478012339&Site=qq&Menu=yes">
+                        <img border="0" src="http://wpa.qq.com/pa?p=1:478012339:4" alt="客服一" />&nbsp;
+                        客服一
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td width="50%" height="35" align="left">
+                    <a target=blank href="tencent://message/?uin=478012339&Site=qq&Menu=yes">
+                        <img border="0" src="http://wpa.qq.com/pa?p=1:478012339:4" alt="客服二" />&nbsp;
+                        客服二
+                    </a>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <!--QQ客服代码结束-->
+</div>
+
 <div id="footer-wrapper">
     <div class="container">
         <div class="row">
