@@ -56,6 +56,9 @@
 2.新功能:更新主页
 3.新功能:增加邮件功能
 
+[zhongyuan_security_1.0.0.1 2014-07-20 张春生]
+1.新功能:增加客服代码
+
 --备注分类
 1、新功能：
 2、Bug:
